--- a/library-app/src/app/app.component.html
+++ b/library-app/src/app/app.component.html
@@ -178,6 +178,7 @@
 <main class="main">
 
   <div class="content">
+    <mat-slide-toggle>Toggle me!</mat-slide-toggle>
     <div class="left-side">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 982 239" fill="none" class="angular-logo">
         <g clip-path="url(#a)">
